plugins {
    id 'java-library'
    id 'maven-publish'
}

repositories {
    mavenCentral()
}

publishing {
    publications {
        maven(MavenPublication) {
            groupId = 'com.github.StarDevelopmentLLC'
            artifactId = 'StarLib'

            from components.java
        }
    }
}

dependencies {
}

group = "com.stardevllc"
version = "1.0.0-alpha.9"

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

tasks.compileJava.dependsOn(clean)